mio_css nueva linea para elemento b html categoria_blade Mensaje al no haber registros para mostrar CategoriaTableSeeder_php nuevo item _boostarap a su array indexMaster_blade  _footer  cambio de la estructura padre _footer>_wrap indexMaster_blade  _footer  agrego redes sociales indexMaster_blade elimino div footer_nav mio_css new selector _social bug solucionado de el proyecto scroll horizontal ImagenTableSeeder se modifico el array corrigiendo el bug de las imagen categoria_blade en view se agrego variable recurzo rollback a migration create_imagens_table y de nuevo php migrate

--- a/public/css/miestilo/mio.css
+++ b/public/css/miestilo/mio.css
@@ -1,3 +1,11 @@
+header{
+	overflow: hidden;
+}
+
+b{
+	font-weight: bold !important;
+}
+
 .navigation .nav > li > a:hover, .navigation .nav > li > a:focus {
 	    background-color: #4880FF;
 }
@@ -115,6 +123,13 @@
 
 
 /*****************Mis css estilos********************/
+
+/**Principales*/
+.main{
+	overflow: hidden;
+}
+/*/Principales**/
+
 
 /*Secion categoria*/
 .categoria .titulo{
@@ -261,3 +276,40 @@ time{
 .pagination > li >a{
 	color: #1c1c1d !important;
 }
+
+
+
+/*#footer Estilos///////////////////*/
+.social{
+	float: right;
+	display: block;
+	padding: 1em;
+
+}
+
+.social a{
+	text-decoration: none;
+	color: white;
+	font-size: 30px;
+	
+}
+
+.footer .row .col-md-6 span{
+	padding: 16px 2px;
+    overflow: hidden;
+    display: block;
+    /* text-align: -webkit-cente*/
+}
+
+
+.footer .row .col-md-6 .social{
+	display: block;
+    margin-right: 43px;
+}
+
+
+/*/footer estilos////////////////////*/
+
+
+
+
