--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,7 +636,7 @@ body {
 /*** Footer ***/
 .footer {
 	background:#AE59B9;
-	padding:3% 0;
+	padding:1% 0;
 }
 .footer-nav{
 	float:right;
